--- a/main.html
+++ b/main.html
@@ -7,8 +7,15 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1 role="heading">This is a heading</h1>
+	<img src= "https://images.unsplash.com/photo-1720048169707-a32d6dfca0b3?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt =  "samsung ssd" width="100px" role="img">
+    <nav role = "navigation"></nav>
+	<ul role = "list">
+		<li role= "listitem">Item 1</li>
+		<li role= "listitem" >Item 2</li>
+		<li role= "listitem">Item 3</li>
+	</ul>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
